fix(style): Fix card context label spacing design r=abenson

--- a/system-addon/content-src/components/Card/_Card.scss
+++ b/system-addon/content-src/components/Card/_Card.scss
@@ -134,7 +134,7 @@
   }
 
   .card-context {
-    padding: 16px 16px 8px 14px;
+    padding: 12px 16px 12px 14px;
     position: absolute;
     bottom: 0;
     left: 0;
